// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiqActionStructuredList should render action info structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_action_info"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_action_info"
    rows={
      Array [
        Object {
          "label": "Description",
          "value": "bar",
        },
        Object {
          "label": "Action Type",
          "value": "Default",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqActionStructuredList should render action policies structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_action"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_action"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "icon": "pficon pficon-warning-triangle-o",
              "value": "Alert description",
            },
          ],
          "onclick": Object {
            "url": "/miq_policy/show/1",
          },
          "title": "View this Alert",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqActionStructuredList should render action type 1 structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_action_info"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_action_info"
    rows={
      Array [
        Object {
          "label": "Name",
          "value": "Snapshot name",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqActionStructuredList should render action type 2 structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_action_info"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_action_info"
    rows={
      Array [
        Object {
          "label": "Object Details",
        },
        Object {
          "label": "Starting Message",
          "value": "Message",
        },
        Object {
          "label": "Request",
          "value": "Request",
        },
        Object {
          "label": "Attribute/Value Pairs",
          "value": Array [
            Object {
              "value": "pair1",
            },
            Object {
              "value": "pair2",
            },
            Object {
              "value": "pair3",
            },
          ],
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqActionStructuredList should render action type 3 structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_action_info"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_action_info"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "icon": "pficon pficon-warning-triangle-o",
              "value": "Alert description",
            },
          ],
          "onclick": Object {
            "url": "/miq_alert/show/1",
          },
          "title": "View this Alert",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;
